Remove test fork configuration - delegating to plugin-plugin